CMAKE_MINimum_required(VERSION 2.6)

SET( CMAKE_BUILD_TYPE DEBUG )

FIND_LIBRARY(PQXX pqxx /opt/local/lib)

find_package(Boost COMPONENTS graph REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})


include_directories(${Boost_INCLUDE_DIRS})

ADD_DEFINITIONS( -O3 -Wall -Wno-deprecated)

ADD_LIBRARY(mum_lib martins.cpp tsaggouris.cpp graph_wrapper.cpp) 
TARGET_LINK_LIBRARIES(mum_lib ${PQXX})

#ADD_EXECUTABLE(mum_test main.cpp )
#TARGET_LINK_LIBRARIES(mum_test mum_lib)


FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

#INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
#ADD_LIBRARY(mum_python SHARED python.cpp)
#TARGET_LINK_LIBRARIES(mum_python mum_lib ${PYTHON_LIBRARIES} ${Boost_LIBRARIES} ${PQXX})

#SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(mumoro.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(mumoro python mumoro.i)
SWIG_LINK_LIBRARIES(mumoro ${PYTHON_LIBRARIES} mum_lib)
#
