cmake_minimum_required(VERSION 2.4)

FIND_PACKAGE(Boost REQUIRED)
FIND_LIBRARY(SQL sqlite3 REQUIRED)
FIND_LIBRARY(EXPAT expat REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${SQL_INCLUDE_DIR})

ADD_DEFINITIONS(-O3 -Wall -pedantic )

ADD_EXECUTABLE(osm2mumoro main.cc)
TARGET_LINK_LIBRARIES(osm2mumoro ${Boost} ${SQL} ${EXPAT})
