CMAKE_MINimum_required(VERSION 2.6)

SET( CMAKE_BUILD_TYPE DEBUG )

FIND_LIBRARY(SQLITE sqlite3)
FIND_LIBRARY(CURL curl)
FIND_LIBRARY(BOOST_REGEX boost_regex)
FIND_LIBRARY(FCGI fcgi)
FIND_LIBRARY(MUMORO shortestpath ../../lib)

ADD_DEFINITIONS( -Wall )


ADD_EXECUTABLE(mum.fcgi main.cpp ${MOC})
TARGET_LINK_LIBRARIES(mum.fcgi ${CURL} ${BOOST_REGEX} ${FCGI} ${MUMORO} ${SQLITE} )

