CMAKE_MINimum_required(VERSION 2.6)

SET( CMAKE_BUILD_TYPE DEBUG )

FIND_PACKAGE(Qt4 REQUIRED)

FIND_LIBRARY(MARBLEWIDGET marblewidget)
FIND_LIBRARY(SQLITE sqlite3)
FIND_LIBRARY(MUMORO shortestpath ../../lib)
IF(MARBLEWIDGET)
  MESSAGE(STATUS "Found the marblewidget, good!")
  MESSAGE(STATUS ${MARBLEWIDGET})
ELSE(MARBLEWIDGET)
  MESSAGE(FATAL_ERROR "Marblewidget not found, unable to continue :(")
ENDIF(MARBLEWIDGET)


ADD_DEFINITIONS( -Wall )


INCLUDE(${QT_USE_FILE})
QT4_WRAP_CPP(MOC object.h)

ADD_EXECUTABLE(mumoro main.cpp ${MOC})
TARGET_LINK_LIBRARIES(mumoro ${MARBLEWIDGET} ${QT_LIBRARIES} ${MUMORO} ${SQLITE} )


